# servant-box

./: Dockerfile  README.md  servant-box.cabal  stack.yaml
lib/client/: README.md  client.cabal
lib/client/src/: Client.hs  Main.hs
lib/mock/: README.md  mock.cabal
lib/mock/src/: Main.hs  Mock.hs
lib/server/: README.md  restclient  server.cabal
lib/server/src/: Main.hs  Reminders.hs  Server.hs  Swagger.hs
lib/swagger/: README.md  swagger.cabal  swagger.json
lib/swagger/src/: Main.hs
lib/tests/: README.md  tests.cabal
lib/tests/src/: Main.hs
