Name:                   client
Version:                0.1.0.0

license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-Modules:     Client
  default-extensions:  RecordWildCards
                     , LambdaCase
                     , OverloadedStrings

  build-depends:       base
                     , server

                     , either
                     , http-client
                     , servant-client
                     , servant
                     , servant-server
                     , aeson
                     , text
                     , time


executable client
  hs-source-dirs:      src
  default-extensions:  RecordWildCards
                     , LambdaCase
                     , OverloadedStrings
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Client

  build-depends:       base
                     , server
                     , client

                     , either
                     , http-client
                     , servant-client
                     , servant
                     , servant-server
                     , aeson
                     , text
                     , time
