Name:                   server
Version:                0.1.0.0

license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Options
                     , Server

  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , aeson
                     , wai
                     , warp
                     , text
                     , optparse-applicative
                     , unix-time
