Name:                   server
Version:                0.1.0.0

license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-Modules:     Server
                     , Reminders
  default-extensions:  RecordWildCards
                     , LambdaCase
                     , OverloadedStrings

  build-depends:       base
                     , servant
                     , servant-server
                     , aeson
                     , wai
                     , warp
                     , text
                     , time
                     , safe

executable server
  hs-source-dirs:      src
  default-extensions:  RecordWildCards
                     , LambdaCase
                     , OverloadedStrings
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Options
                     , Server
                     , Reminders

  build-depends:       base
                     , servant
                     , servant-server
                     , aeson
                     , wai
                     , warp
                     , text
                     , optparse-applicative
                     , time
                     , safe
