Name:                   swagger
Version:                0.1.0.0

license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable swagger
  hs-source-dirs:      src
  default-extensions:  RecordWildCards
                     , OverloadedStrings
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , lens
                     , server
                     , servant
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , aeson
                     , text
                     , time
